overflow resolved

--- a/access/css/about_section.css
+++ b/access/css/about_section.css
@@ -48,6 +48,7 @@
 #about {
     display: flex;
     justify-content: right;
+    overflow-x: hidden;
 }
   
 #about .aboutBox {
