--- a/access/css/skills_section.css
+++ b/access/css/skills_section.css
@@ -33,6 +33,7 @@
 
 #skills .percentages{
     justify-content: space-around;
+    overflow-x: hidden;
 }
 
 #skills .language{
